# plantuml

./: .gitignore  LICENSE  Makefile  README  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
sphinxcontrib/: plantuml.py
tests/: fakecmd.py  fakeepstopdf.py  test_directive.py  test_functional.py  test_svgstyle.py
tests/fixture/: Makefile  README.rst  conf.py  hello.puml  index.rst  seq.ja.uml
