[egg_info]
;tag_build = dev
;tag_date = true

[aliases]
release = egg_info -RDb ''

[flake8]
exclude =
    tests/fixture
# E741: ambiguous variable name 'l'
# W503: line break before binary operator
ignore = E741, W503
max-line-length = 80

[options]
install_requires =
    Sphinx>=1.6

[options.extras_require]
test =
    pytest
    Pillow
    flake8
