[egg_info]
;tag_build = dev
;tag_date = true

[aliases]
release = egg_info -RDb ''

[flake8]
exclude =
    tests/fixture
# E203: whitespace before ':' (which disagrees with black)
# E741: ambiguous variable name 'l'
# W503: line break before binary operator
ignore = E203, E741, W503
# The default of black
max-line-length = 88

[options]
install_requires =
    Sphinx>=1.6

[options.extras_require]
test =
    pytest
    Pillow
    flake8
